--- a/src/modal.css
+++ b/src/modal.css
@@ -57,7 +57,7 @@
 .lcm-text-column {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .lcm-wallet-name {
